# diploma-backend

./: .gitignore  Dockerfile  Procfile  README.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
ecoMarket/: .env  asgi.py  settings.py  urls.py  wsgi.py
ecoMarketAPI/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
ecoMarketAPI/migrations/: 0001_initial.py  0002_productcategory_product.py  0002_remove_order_ordered_product_list_and_more.py  0003_alter_order_order_number.py  0003_review_product_reviews.py  0004_alter_product_reviews.py  0004_remove_order_id_alter_order_order_number.py  0005_alter_product_id.py  0006_alter_productcategory_id.py  0007_alter_productcategory_image.py  0008_alter_product_image.py  0009_alter_orderitem_product.py  0010_remove_order_products_alter_orderitem_quantity.py  0011_alter_order_order_number.py  0012_rename_product_orderitem_product_id_and_more.py  0013_rename_product_id_orderitem_product_and_more.py  0014_order_total_amount_alter_order_address_and_more.py  0015_alter_order_ordered_products.py  0016_rename_ordered_products_order_ordered_product_list.py  0017_alter_order_total_amount.py  0018_alter_order_total_amount.py  0019_alter_order_total_amount.py  0020_alter_orderitem_id.py
